--- a/main.html
+++ b/main.html
@@ -8,16 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	 <h1>Login Form</h1>
-  <form id="login-form">
-    <input type="text" id="username" placeholder="Username" required>
-    <input type="password" id="password" placeholder="Password" required>
-    <label>
-      <input type="checkbox" id="checkbox"> Remember me
-    </label>
-    <input type="submit" id="submit" value="Submit">
-  </form>
-  <button id="existing" style="display: none;">Login as existing user</button>
+	  <div class="form-container">
+    <h1>Login Form</h1>
+    <form id="loginForm">
+      <!-- Add labels with 'for' attributes matching input ids -->
+      <label for="username">Username:</label>
+      <input type="text" id="username" placeholder="Username" required>
+
+      <label for="password">Password:</label>
+      <input type="password" id="password" placeholder="Password" required>
+
+      <div>
+        <input type="checkbox" id="checkbox">
+        <label for="checkbox">Remember me:</label>
+      </div>
+
+      <input type="submit" id="submit" value="Submit">
+    </form>
+    <button id="existing">Login as existing user</button>
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
